<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp">

    <TextView
        android:id="@+id/welcome_bsck_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="16sp"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/os_medium"
        android:textColor="@color/visan_text_light"
        />

    <TextView
        android:id="@+id/sign_in_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_bsck_txt"
        android:layout_marginTop="2sp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/visan_text_default"
        android:textSize="21sp" />


    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_below="@id/sign_in_continue"
        android:layout_marginTop="26sp"
        android:textSize="16sp"
        android:textColor="@color/visan_text_light"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/email_title"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_outline"
        android:hint="@string/example_email_com"
        android:inputType="textEmailAddress"
        android:paddingStart="12sp"
        android:paddingEnd="8sp"
        android:singleLine="true"
        android:textColorHint="@color/visan_text_light" />

    <TextView
        android:id="@+id/pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_et"
        android:layout_marginTop="24sp"
        android:text="@string/password_title"
        android:textColor="@color/visan_text_light"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/pass_title"
        android:layout_marginTop="2sp"
        android:background="@drawable/edittext_outline"
        android:inputType="textPassword"
        android:paddingStart="12sp"
        android:paddingEnd="8sp"
        android:singleLine="true"
        android:textColorHint="@color/visan_text_light" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_et"
        android:layout_alignParentEnd="true"
        android:text="@string/forgot_password"
        android:textColor="@color/visan_p_dark"
        android:layout_marginTop="5sp"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_pass"
        android:layout_marginTop="48sp"
        android:background="@drawable/btn_filled_background"
        android:fontFamily="@font/os_semi_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_below="@id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/New_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:fontFamily="@font/os_medium"/>
        <TextView
            android:id="@+id/sign_up_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_in_login"
            android:fontFamily="@font/os_medium"
            android:textColor="@color/visan_p_dark"
            android:layout_marginStart="2sp"/>

    </LinearLayout>




</RelativeLayout>