<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp"
    tools:context=".Forgot_Password">

    <LinearLayout
        android:id="@+id/fg_titlr_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_half"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/forgot_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/os_semi_bold"
            android:text="@string/forgot_password_m"
            android:textColor="@color/visan_text_default"
            android:textSize="21sp"
            android:layout_marginStart="15sp"/>
    </LinearLayout>



    <TextView
        android:id="@+id/otp_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fg_titlr_lin"
        android:layout_marginTop="32sp"
        android:fontFamily="@font/os_medium"
        android:text="@string/otp_desc"
        android:textColor="@color/visan_text_light"
        android:textSize="16sp" />
    
    <LinearLayout
        android:id="@+id/phone_details_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_description"
        android:layout_marginTop="2sp">

        <TextView
            android:id="@+id/phone_no_fg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/os_semi_bold"
            android:text="@string/phone_no_fg"
            android:textColor="@color/visan_p_dark" />

        <TextView
            android:id="@+id/change_ph_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/os_medium"
            android:text="@string/change_fg"
            android:textColor="@color/visan_extra_light"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/otp_et_lin"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_details_lin"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true">
        
        <EditText
            android:id="@+id/otp_et_1"
            android:layout_width="48sp"
            android:layout_height="52sp"
            android:background="@drawable/edittext_outline"
            android:paddingStart="2sp"
            android:paddingEnd="2sp"
            android:inputType="number"
            android:singleLine="true"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/otp_et_2"
            android:layout_width="48sp"
            android:layout_height="52sp"
            android:background="@drawable/edittext_outline"
            android:paddingStart="2sp"
            android:paddingEnd="2sp"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginStart="8sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/otp_et_3"
            android:layout_width="48sp"
            android:layout_height="52sp"
            android:background="@drawable/edittext_outline"
            android:paddingStart="2sp"
            android:paddingEnd="2sp"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginStart="8sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/otp_et_4"
            android:layout_width="48sp"
            android:layout_height="52sp"
            android:background="@drawable/edittext_outline"
            android:paddingStart="2sp"
            android:paddingEnd="2sp"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginStart="8sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/otp_et_5"
            android:layout_width="48sp"
            android:layout_height="52sp"
            android:background="@drawable/edittext_outline"
            android:paddingStart="2sp"
            android:paddingEnd="2sp"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginStart="8sp"
            android:importantForAutofill="no"/>
        
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_btn"
        android:layout_width="370sp"
        android:layout_height="54sp"
        android:layout_below="@id/otp_et_lin"
        android:layout_marginTop="44sp"
        android:background="@drawable/btn_filled_background"
        android:fontFamily="@font/os_semi_bold"
        android:text="@string/verify_fg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_btn"
        android:layout_marginTop="24sp"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/timer_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic__timer"
            android:layout_gravity="center"
            android:layout_marginStart="2sp"

            />
        <TextView
            android:id="@+id/timer_fg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_05_00_timergf"
            android:layout_marginStart="2sp"
            android:textSize="14sp"
            android:layout_marginEnd="2sp"
            android:textColor="@color/visan_p_dark"/>
    </LinearLayout>


    
</RelativeLayout>