<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Set_new_password"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp">

    <LinearLayout
        android:id="@+id/set_new_p_title"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp">

        <ImageView
            android:id="@+id/back_snp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_half"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/set_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_new_password"
            android:textSize="21sp"
            android:textColor="@color/visan_text_default"
            android:fontFamily="@font/os_semi_bold"
            android:layout_marginStart="15sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/pass_snp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_new_p_title"
        android:layout_marginTop="24sp"
        android:fontFamily="@font/os_medium"
        android:text="@string/set_new_password"
        android:textColor="@color/visan_text_light" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_et_snp"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/pass_snp"
        android:layout_marginTop="2sp"
        android:background="@drawable/edittext_outline"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/re_pass_snp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et_snp"
        android:layout_marginTop="24sp"
        android:fontFamily="@font/os_medium"
        android:text="@string/confirm_new_password"
        android:textColor="@color/visan_text_light" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/re_pass_et_snp"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/re_pass_snp"
        android:layout_marginTop="2sp"
        android:background="@drawable/edittext_outline"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/snp_btn"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/re_pass_et_snp"
        android:layout_marginTop="44sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/btn_filled_background"
        android:text="@string/set_password_btn"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/os_semi_bold"
        android:textColor="@color/white"/>

</RelativeLayout>